<package>
  <name>brazo_PF</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for brazo_PF</p>
    <p>This package contains configuration data, 3D models and launch files
for brazo_PF robot</p>
  </description>
  <author>me</author>
  <maintainer email="me@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>

  <build_depend>roslaunch</build_depend>
  
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>urdf</run_depend>
  
  <run_depend>rviz</run_depend>
  
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
